# Teameeting-MsgServer

./: .gitignore  README.md
MsgServer/MsgServer/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  lib_cp.sh
MsgServer/MsgServer/.deps/: RTHiredis.Po  RTHttpMsg.Po  RTMeetMsg.Po  RTMessage.Po  RTSignalMsg.Po  RTTcp.Po  config_parser.Po  libMSCommon_a-RTHiredis.Po  libMSCommon_a-RTHttpMsg.Po  libMSCommon_a-RTMeetMsg.Po  libMSCommon_a-RTMessage.Po  libMSCommon_a-RTSignalMsg.Po  libMSCommon_a-RTTcp.Po  libMSCommon_a-sigslot.Po  sigslot.Po
MsgServer/MsgServer/MSCommon/: ProtoCommon.h  Win32header.h  build_3rdlibs.sh  config_parser.cpp  config_parser.h  lib_a.sh  revision.h
MsgServer/MsgServer/MSTest/: Makefile.am  TTask.cpp  TTask.h  TUtil.cpp  TUtil.h  config.h  configure  configure.ac  main.cpp  mstest
MsgServer/MsgServer/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
MsgServer/MsgServer/proto/: .build_proto.sh  build_proto.sh  common_msg.pb.cc  common_msg.pb.h  common_msg.proto  meet_msg.proto  meet_msg_type.pb.cc  meet_msg_type.pb.h  sequence_msg.pb.cc  sequence_msg.pb.h  sequence_msg.proto  storage_msg.pb.cc  storage_msg.pb.h  storage_msg.proto  storage_msg_type.pb.cc  storage_msg_type.pb.h  storage_msg_type.proto  sys_msg.pb.h  sys_msg.proto  sys_msg_type.pb.cc  sys_msg_type.pb.h  sys_msg_type.proto
MsgServer/MsgServerClient/: ClientManager.cpp  ClientManager.h  Makefile.am  MsgServerClient.cpp  MsgServerClient.h  README  SeqnClient  SeqnClient.cpp  SeqnClient.h  config.h  configure  configure.ac  gen_tags.sh  kevin-recv  kevin-send  log_parser  main.cpp  params.conf
MsgServer/MsgServerClient/ClientCommon/: MSClientDelegate.h  MSClientManager.cpp  MSClientManager.h  MSClientType.h  MSGroupDelegate.h  MSGroupManager.cpp  MSGroupManager.h  MSMessage.cpp  MSMessage.h  MSMessageManager.cpp  MSMessageManager.h  MSMsgUtil.cpp  MSMsgUtil.h  MSSqlite3.cpp  MSSqlite3.h  MSSqlite3Manager.cpp  MSSqlite3Manager.h  MSSubMessage.cpp  MSSubMessage.h  MSSubMessageDelegate.h  MsgClient.cpp  MsgClient.h  RTSingleton.h
MsgServer/MsgServerClient/ClientSession/: ClientSession.cpp  ClientSession.h
MsgServer/MsgServerClient/client_common/: RTMsgCommon.h  ar.mac  makefile  tool.mak
MsgServer/MsgServerConnector/: CRTConnManager.cpp  CRTConnManager.h  CRTConnectionManager.cpp  CRTConnectionManager.h  CRTConnector.cpp  CRTConnector.h  CRTDispatchConnection.cpp  CRTDispatchConnection.h  CRTXRedis.cpp  CRTXRedis.h  Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.ac  connector.tar.bz2  connector.tar.bz2.bak  main.cpp  main.cpplocal
MsgServer/MsgServerConnector/.deps/: CRTConnHttp.Po  (+25 more)
MsgServer/MsgServerDispatcher/: DRTConnDispatcher.cpp  DRTConnDispatcher.h  DRTConnManager.cpp  DRTConnManager.h  DRTConnectionManager.cpp  DRTConnectionManager.h  DRTMsgQueue.cpp  DRTMsgQueue.h  Makefile  Makefile.am  Makefile.in  MsgServerDispatcher  config.h  config.status  configure  configure.ac  dispatcher.tar  dispatcher.tar.bz2  dispatcher.tar.bz2.bak  main.cpp  main.cpplocal
MsgServer/MsgServerGrouper/: GRTChannelManager.cpp  GRTChannelManager.h  GRTConnDispatcher.cpp  GRTConnDispatcher.h  GRTConnManager.cpp  GRTConnManager.h  GRTGrouper.cpp  GRTGrouper.h  GRTGrouperManager.cpp  GRTGrouperManager.h  Makefile.am  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerLogical/: LRTConnDispatcher.cpp  LRTConnDispatcher.h  LRTConnManager.cpp  LRTConnManager.h  LRTLogical.cpp  LRTLogical.h  LRTLogicalManager.cpp  LRTLogicalManager.h  Makefile.am  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerMeeting/: MRTConnDispatcher.cpp  MRTConnDispatcher.h  MRTConnManager.cpp  MRTConnManager.h  MRTConnectionManager.cpp  MRTConnectionManager.h  MRTMeeting.cpp  MRTMeeting.h  MRTMeetingRoom.cpp  MRTMeetingRoom.h  MRTRoomDispatcher.cpp  MRTRoomDispatcher.h  MRTRoomManager.cpp  MRTRoomManager.h  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  main.cpp  meeting.tar.bz2  meeting.tar.bz2.bak  msgserver  test_memleak.sh
MsgServer/MsgServerModule/: MRTConnDispatcher.cpp  MRTConnDispatcher.h  MRTConnManager.cpp  MRTConnManager.h  MRTModule.cpp  MRTModule.h  MRTModuleManager.cpp  MRTModuleManager.h  Makefile.am  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerPusher/: Makefile.am  PRTConnDispatcher.cpp  PRTConnDispatcher.h  PRTConnManager.cpp  PRTConnManager.h  PRTPusher.cpp  PRTPusher.h  PRTPusherManager.cpp  PRTPusherManager.h  PRTXRedis.cpp  PRTXRedis.h  cert  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerRTLive/: LRTConnDispatcher.cpp  LRTConnDispatcher.h  LRTConnManager.cpp  LRTConnManager.h  LRTGrpConnTcp.cpp  LRTGrpConnTcp.h  LRTModuleConnTcp.cpp  LRTModuleConnTcp.h  LRTRTLive.cpp  LRTRTLive.h  LRTRTLiveManager.cpp  LRTRTLiveManager.h  Makefile.am  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerRTRedis/: Makefile.am  RRTRTRedis.cpp  RRTRTRedis.h  RRTRTRedisManager.cpp  RRTRTRedisManager.h  config.h  configure  configure.ac  main.cpp
MsgServer/MsgServerSequence/: Makefile.am  SRTConnDispatcher.cpp  SRTConnDispatcher.h  SRTConnManager.cpp  SRTConnManager.h  SRTRedisManager.cpp  SRTRedisManager.h  SRTResponseCollection.cpp  SRTResponseCollection.h  SRTSequence.cpp  SRTSequence.h  SRTSequenceGenerator.cpp  SRTSequenceGenerator.h  SRTSequenceManager.cpp  SRTSequenceManager.h  SRTSequenceRedis.cpp  SRTSequenceRedis.h  config.h  configure  configure.ac  log_parser  main.cpp
MsgServer/MsgServerStorage/: Makefile.am  SRTConnDispatcher.cpp  SRTConnDispatcher.h  SRTConnManager.cpp  SRTConnManager.h  SRTRedisGroup.cpp  SRTRedisGroup.h  SRTRedisManager.cpp  SRTRedisManager.h  SRTResponseCollection.cpp  SRTResponseCollection.h  SRTResponseSender.cpp  SRTResponseSender.h  SRTStorage.cpp  SRTStorage.h  SRTStorageGenerator.cpp  SRTStorageGenerator.h  SRTStorageManager.cpp  SRTStorageManager.h  SRTStorageRedis.cpp  SRTStorageRedis.h  config.h  configure  configure.ac  main.cpp
(+1447 files in other folders)
