bin_PROGRAMS=MsgServerGrouper

AM_CFLAGS=-g -O0 -std=c++11 -Wall -fPIC -D__PTHREADS__ -D__PTHREADS_MUTEXES__
###AM_CFLAGS+=-DAUTO_RECONNECT
MsgServerGrouper_LDFLAGS=-static-libgcc

AM_CPPFLAGS=$(AM_CFLAGS)

AM_CPPFLAGS+=-I$(top_srcdir)/ \
			 -I$(top_srcdir)/GRTListener/ \
			 -I$(top_srcdir)/GRTTransfer/

AM_CPPFLAGS+= -I$(top_srcdir)/../ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSBase/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSCommon/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/autoref/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/hiredis/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/xredis/include \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/libhttp/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/RTComm/ \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/zkclient/common/include \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/zkclient/efnfw \
		   -I$(top_srcdir)/../MsgServer/MSCommon/MSThirdParty/rtklog/

MsgServerGrouper_SOURCES=$(top_srcdir)/GRTListener/GRTGrouperListener.cpp \
						   $(top_srcdir)/GRTTransfer/GRTTransferSession.cpp \
						   $(top_srcdir)/GRTTransfer/GRTSubChannel.cpp \
						   $(top_srcdir)/GRTTransfer/XGrpMsgProcesser.cpp \
						   $(top_srcdir)/GRTChannelManager.cpp \
						   $(top_srcdir)/GRTConnManager.cpp \
						   $(top_srcdir)/GRTConnDispatcher.cpp \
						   $(top_srcdir)/GRTGrouperManager.cpp \
						   $(top_srcdir)/GRTGrouper.cpp \
						   $(top_srcdir)/main.cpp

MsgServerGrouper_LDADD=-L$(top_srcdir)/../MsgServer/MSCommonLib/ -lMSCommon -lRtComm -lxredis -lhiredis -lhttp -lrtklog -lzkclient
MsgServerGrouper_LDADD+=/usr/local/lib/libjsoncpp.a /usr/local/lib/libzookeeper_mt.a /usr/local/lib/libprotobuf-lite.a
MsgServerGrouper_LDADD+=-lpthread -lrt -ldl

