cmake_minimum_required(VERSION 2.6)
project(localredistest)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_definitions("-Wall -g -fPIC -std=c++11")
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
include_directories(${PROJECT_SOURCE_DIR}/src /usr/local/include)
LINK_DIRECTORIES(/usr/local/lib /usr/lib64)
link_libraries(hiredis ssl crypto)
file(GLOB_RECURSE CS_LIST ./src/*.cpp)
add_executable(bin/localredistest ${CS_LIST})
